--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ reqwest = { version = "0.12", default-features = false, features = [
 rpassword = "7.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
+tempdir = "0.3.7"
 tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 httpmock = "0.6"
 tempfile = "3"
+mockito = "1.7.0"
