--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 httpmock = "0.6"
 tempfile = "3"
 mockito = "1.7.0"
+serial_test = "3.2.0"
