ci: build for mac

--- a/.github/workflows/_code.yml
+++ b/.github/workflows/_code.yml
@@ -31,7 +31,10 @@ jobs:
           --deny warnings
 
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout source
         uses: actions/checkout@v4.2.2
