--- a/.github/workflows/_release.yml
+++ b/.github/workflows/_release.yml
@@ -5,12 +5,22 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            archive: tokens-linux-x64.zip
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            archive: tokens-macos-arm64.zip
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout source
         uses: actions/checkout@v4.2.2
 
-      - name: Install musl
+      - name: Install musl (Linux only)
+        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y musl-tools
@@ -18,17 +28,17 @@ jobs:
       - name: Install rust
         uses: actions-rust-lang/setup-rust-toolchain@v1.15.0
         with:
-          target: x86_64-unknown-linux-musl
+          target: ${{ matrix.target }}
 
       - name: Build binary
-        run: cargo build --release --target x86_64-unknown-linux-musl
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Zip binary
-        run: zip tokens ./target/x86_64-unknown-linux-musl/release/tokens -j
+        run: zip ${{ matrix.archive }} ./target/${{ matrix.target }}/release/tokens -j
 
       - name: Release Tokens
         if: github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/'))
         uses: softprops/action-gh-release@v1
         with:
-          files: tokens.zip
+          files: ${{ matrix.archive }}
 
